Fix card form so all children aligned

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   border: black 2px solid;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   height: fit-content;
   font-weight: bolder;
   width: 100%;
